# sector-rotation-system

./: .gitignore  README.md  build_notebook.py  config.yaml  conftest.py  dashboard.py  data_feeds.py  deployment_day1.py  deployment_trades.csv  etf_selections.json  holdings_tracker.py  integration_test.py  monitor.py  nlp_sentiment.py  portfolio_optimizer.py  pyproject.toml  regime_blend_example.py  regime_detector.py  regime_probability_enhancement.py  requirements-ci.txt  requirements.txt  setup_and_backtest-3.ipynb  smoke_test_phase10.py  smoke_test_phase11.py  smoke_test_phase3.py  smoke_test_phase3b.py  smoke_test_phase4.py  smoke_test_phase5.py  smoke_test_phase6.py  smoke_test_phase9.py  stock_screener.py  test_etf_quality.py  test_push.txt
.github/workflows/: daily_monitor.yml
notebooks/: setup_and_backtest-5.ipynb  setup_and_backtest-6.ipynb  setup_and_backtest.ipynb  trade_recorder.ipynb  validate_signals.ipynb
src/sector_rotation/: __init__.py  dashboard.py  etf_selector.py  holdings_tracker.py  lookahead_guard.py  monitor.py  portfolio_optimizer.py  regime_detector.py  stock_screener.py  transaction_costs.py  universe_builder.py  walk_forward.py
tests/: conftest.py  test_all_modules.py  test_dashboard.py  test_data_feeds.py  test_etf_quality.py  test_integration.py  test_monitor.py  test_nlp_sentiment.py  test_portfolio_optimizer.py  test_regime_detector.py  test_stock_screener.py
